Add locations/{id} api endpoint for location summary and menu